# DoTrack

./: README.md
src/dotrack.projects/: .env.example  .gitignore  .ruff.toml  Dockerfile  Readme.md  alembic.ini  main.py  pyproject.toml  pyrightconfig.json
src/dotrack.projects/alembic/: env.py
src/dotrack.projects/alembic/versions/: 2024-07-12_add_user_table.py  282f2b6f8d4c_initial_tables.py
src/dotrack.projects/src/: models.py
src/dotrack.projects/src/auth/: models.py  repository.py  routes.py  schemas.py  service.py
src/dotrack.projects/src/common/: dependencies.py  models.py
src/dotrack.projects/src/core/: db.py  logging.py  repository.py  security.py  services.py  settings.py  utils.py
src/dotrack.projects/src/projects/: models.py  repository.py  routers.py  routes.py  schemas.py  service.py
src/dotrack.projects/tests/: conftest.py  test_login.py  test_projects.py  utils.py
